--- a/R/Entrega1.Rmd
+++ b/R/Entrega1.Rmd
@@ -1,6 +1,6 @@
 ---
-title: "Entrega1"
-author: "Alejandro Pachón"
+title: "Exploration and Application of R for Data Science"
+author: "Alejandro Pachón, Santiago Meza, Alexander Morgan"
 date: "2023-02-25"
 output: pdf_document
 ---
@@ -9,14 +9,28 @@ output: pdf_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## R Markdown
+## Numeros primos
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
+En este codigo, la linea for (x in 1:100){, identifica con la variable "x", desde el valor 1 al 100.
+Luego se declara "Nprimo" como TRUE, para que en cuyo caso de que el numero a valorar sea primo, el codigo posteriormente lo imprima sin necesidad de volver a preguntar el numero almacenado, despues se abre un nuevo 'for' en donde se encuentran dos "if", para que luego de realizar la operación, identifique si es o no un numero primo. Conociendo que si la división es menor al valor que este en el "for N", tomara la variable N el valor de x para salir del "for" y continuar a imprimir el numero. De lo contrario, si el modulo es diferente de "0", Nprimo pasara a ser falso y no imprimira el numero en la consola. Y asi consecutivamente hasta llegar al numero 100.  
+```{r primos}
+#numeros primos
+for (x in 1:100){
+  Nprimo <- TRUE
+  for(N in 2:x){
+    mid=x/2
+    if(N>mid){
+      N=x
+    }
+    if(N!=x & x%%N==0){
+      Nprimo <- FALSE
+    }
+  }
+  if(Nprimo==TRUE & x!=1){
+    print(x)
+  }
+}
 
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
-```{r cars}
-summary(cars)
 ```
 
 ## Including Plots
