--- a/R/Entrega1.Rmd
+++ b/R/Entrega1.Rmd
@@ -12,7 +12,7 @@ knitr::opts_chunk$set(echo = TRUE)
 ## Numeros primos
 
 En este codigo, la linea for (x in 1:100){, identifica con la variable "x", desde el valor 1 al 100.
-Luego, se declara "Nprimo" como TRUE, para que en cuyo caso de que el numero a valorar sea primo, el codigo posteriormente lo imprima sin necesidad de volver a preguntar el numero almacenado, despues se abre un nuevo 'for' en donde se encuentran dos "if", para que luego de realizar la operación, identifique si es o no un numero primo. Conociendo que si la división es menor al valor que este en el "for N", tomara la variable N el valor de x para salir del "for" y continuar a imprimir el numero. De lo contrario, si el modulo es diferente de "0", Nprimo pasara a ser falso y no imprimira el numero en la consola. Y asi consecutivamente hasta llegar al numero 100.  
+Luego, se declara "Nprimo" como TRUE, para que en cuyo caso de que el numero a valorar sea primo, el codigo posteriormente lo imprima sin necesidad de volver a preguntar el numero almacenado, despues se abre un nuevo 'for' en donde se encuentran dos "if", para que luego de realizar la operación, identifique si es o no un numero primo. Conociendo que si la división es menor al valor que este en el "for N", tomara la variable N el valor de x para salir del "for" y continuar a imprimir el numero. De lo contrario, si el modulo es diferente de "0", Nprimo pasara a ser falso y no imprimira el numero en la consola. Y asi consecutivamente hasta llegar al número 100.  
 ```{r primos}
 #numeros primos
 for (x in 1:100){
