--- a/R/Entrega1.Rmd
+++ b/R/Entrega1.Rmd
@@ -10,7 +10,8 @@ knitr::opts_chunk$set(echo = TRUE)
 ```
 ## GitHub
 
-En este link podrás encontrar nuestro repositorio en internet: https://github.com/Alejandro29-tech/Assignment1.git
+En este link podrás encontrar nuestro repositorio en internet:
+https://github.com/Alejandro29-tech/Assignment1.git
 
 ## Numeros primos
 
