--- a/R/Entrega1.Rmd
+++ b/R/Entrega1.Rmd
@@ -10,11 +10,9 @@ knitr::opts_chunk$set(echo = TRUE)
 ```
 
 ## GitHub
-
-En este link podrás encontrar nuestro repositorio en internet:
-
-https://github.com/Alejandro29-tech/Assignment1.git
-
+```{r, out.width = "70%", fig.cap = "Puedes encontrar nuestro repositorio en "}
+knitr::include_url("https://github.com/Alejandro29-tech/Assignment1.git")
+```
 ## Numeros primos
 
 En este codigo, la linea for (x in 1:100){, identifica con la variable "x", desde el valor 1 al 100.
