--- a/R/Entrega1.Rmd
+++ b/R/Entrega1.Rmd
@@ -11,6 +11,8 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ## GitHub
 
+Visita nuestro repositorio en internet para más información: [**Nuestro Repositorio**](https://github.com/Alejandro29-tech/Assignment1.git)
+
 ## Numeros primos
 
 En este codigo, la linea for (x in 1:100){, identifica con la variable "x", desde el valor 1 al 100.
