--- a/R/Entrega1.Rmd
+++ b/R/Entrega1.Rmd
@@ -170,7 +170,7 @@ arrange(flights,air_time)
 
 #### 4. ¿Qué vuelos viajaron más lejos? ¿Cuál viajó menos?.
 
-Para encontrar los vuelos  que viajaron mas usamos `arrange()` con la variable `distance` y lo ordenamos con `desc()`.
+Para encontrar los vuelos que viajaron mas usamos `arrange()` con la variable `distance` y lo ordenamos con `desc()`.
 
 ```{r 5.3.4, message=FALSE }
 library(nycflights13)
@@ -178,9 +178,74 @@ library(dplyr)
 arrange(flights,desc(distance)) # Vuelo más largo
 ```
 
-Para encontrar el vuelo  que viajaro menos, quitamos `desc()` del codigo anterior y asi toman el orden normal.
+Para encontrar el vuelo que viajaro menos, quitamos `desc()` del codigo anterior y asi toman el orden normal.
+
 ```{r 5.3.4b, message=FALSE }
 library(nycflights13)
 library(dplyr)
 arrange(flights,distance) # Vuelo más largo
+```
+
+### 5.4.1:
+
+#### 2. ¿Qué sucede si se incluye el nombre de una variable varias veces en select()?
+
+Cualquier variable duplicada solo se incluye una vez. Para comprobar esto, tenemos el siguiente ejemplo
+
+```{r 5.4.2, message=FALSE }
+library(nycflights13)
+library(dplyr)
+select(flights, year, day, year, year, day, dest, dep_delay)
+```
+
+#### 3.Que hace la funcion any_of()? ¿Por qué podría ser útil en conjunto con este vector? 
+
+**`vars <- c("year", "month", "day", "dep_delay", "arr_delay")`**
+
+La función `one_of()` se utiliza para seleccionar solo las columnas del conjunto de datos que se encuentran en un vector, en este caso el vector "`vars`", tambien con esta función se puede simplificar la funcion `select()`.
+
+```{r 5.4.3, message=FALSE}
+library(nycflights13)
+library(dplyr)
+vars<-c("year", "month", "day", "dep_delay", "arr_delay")
+select(flights, one_of(vars))
+```
+
+
+#### 4. ¿Te sorprende el resultado de ejecutar el siguiente código? `select(flights, contains("TIME"))`
+
+Es sorprendente, es ingenioso que mediante una línea de código se pódia realizar una "busqueda" de esta forma. ya que realizar una busqueda/filtracion de variables mediente una sentencia es interesante.
+
+```{r 5.4.4, message=FALSE}
+library(nycflights13)
+library(dplyr)
+select(flights, contains("time"))
+```
+
+
+### 5.5.2:
+#### 1. convertir `dep_time` y `sched_dep_time ` en una representacion de minutos desde la media noche
+
+Para obtener los horarios de salida en minutos, se divide `dep_time` en 100 para obtener las horas desde la medianoche y multiplicar por 60 para tener los minutos, despues sumar el resto de `dep_time` dividido por 100. como ejemplo podemos usar la ora 14:05 (1405 o 2:05Pm) 
+```{r 5.5.1, message=FALSE}
+1405 %/% 100 * 60 + 1405 %% 100
+```
+Sin embargo para que todas las horas se puedan convertir se necita hacer la operacion `&&` del resultado con `1440`. esto devido a que si se ingresa un valor de medida noche (2400) no se toma como el resultado de 0 como se espera, si no que da como resultado `1440`. Despues se remplaza el valor ejemplo por la variable a convertir, sin embargo para realizar dicha conversion se requiere el uso de la funcion `mutate()`, adicionalmente, se crean dos nuevas columnas que representaran dicha conversion de los datos. Asi se optiene que:
+
+```{r 5.5.1p1, message=FALSE}
+library(nycflights13)
+library(dplyr)
+mutate(flights, dep_time_min=(dep_time%/%100*60+dep_time%%100)%%1440,
+           sched_dep_time_min=(sched_dep_time%/%100*60+sched_dep_time%%100)%%1440)
+```
+
+y para facilitar la visualizacion de estas conversiones usamos una funcion `select()` con las nuevas variables.
+
+```{r 5.5.1p2, message=FALSE}
+library(nycflights13)
+library(dplyr)
+new_flights<-mutate(flights, dep_time_min=(dep_time%/%100*60+dep_time%%100)%%1440,
+           sched_dep_time_min=(sched_dep_time%/%100*60+sched_dep_time%%100)%%1440)
+ select(new_flights,dep_time_min, sched_dep_time_min)
+
 ```
