--- a/R/Entrega1.Rmd
+++ b/R/Entrega1.Rmd
@@ -15,10 +15,13 @@ Puedes visitar nuestro repositorio en internet, para más información : [**Nues
 
 ## Numeros primos
 
-En este codigo, la linea for (x in 1:100){, identifica con la variable "x", desde el valor 1 al 100. Luego, se declara "Nprimo" como TRUE, para que en cuyo caso de que el numero a valorar sea primo, el codigo posteriormente lo imprima sin necesidad de volver a preguntar el numero almacenado, despues se abre un nuevo 'for' en donde se encuentran dos "if", para que luego de realizar la operación, identifique si es o no un numero primo. Conociendo que si la división es menor al valor que este en el "for N", tomara la variable N el valor de x para salir del "for" y continuar a imprimir el numero. De lo contrario, si el modulo es diferente de "0", Nprimo pasara a ser falso y no imprimira el numero en la consola. Y asi consecutivamente hasta llegar al número 100.
+En este código, la línea for (x in 1:100){, identifica con la variable "x", desde el valor 1 al 100. Luego, se declara "Nprimo" como TRUE, para que en cuyo caso de que el número a valorar sea primo, el código posteriormente lo imprima sin necesidad de volver a preguntar el numero almacenado, después se abre un nuevo 'for' en donde se encuentran dos "if", para que luego de realizar la operación, identifique si es o no un numero primo. Conociendo que, si la división es menor al valor que este en el "for N", tomara la variable N el valor de x para salir del "for" y continuar a imprimir el número. De lo contrario, si el módulo es diferente de "0", Nprimo pasará a ser falso y no imprimirá el numero en la consola. Y así consecutivamente hasta llegar al número 100.
+
 
 ```{r primos, results='asis'}
-#numeros primos
+
+# Números primos
+
 for (x in 1:100){
   Nprimo <- TRUE
   for(N in 2:x){
@@ -37,19 +40,20 @@ for (x in 1:100){
 
 ```
 
-## 2. Uso basico de la libreria Tidyverse
+## 2. Uso básico de la libreria Tidyverse
 
-los ejercicios propuestos en el documento se tomaron del apartado [**Data transformation**](https://r4ds.had.co.nz/transform.html), de la pagina *R for Data Science*.
+Los ejercicios propuestos en el documento se tomaron del apartado [**Data transformation**](https://r4ds.had.co.nz/transform.html), de la página *R for Data Science*.
 
-### 5.2.4:
+## 5.2.4:
 
-####1. Encuentra todos los vuelos que:
+## 1. Encuentra todos los vuelos que:
 
 -   **Item 1:** Tuvieron un retraso de llegada de dos o más horas.
 
-Primero identificamos la variable de retraso de llegada, en la base de datos es `arr_delay`, tambien identificamos que los datos que nececitamos son un conjunto de filas, por esto se toma la funcion `filter()` y se agrega la condicion que nececitamos para tomar los vuelos que tuvieron un retraso de llegada de dos horas o mas. De esta forma tendriamos que:
+Primero identificamos la variable de retraso de llegada, en la base de datos es `arr_delay`, también identificamos que los datos que necesitamos son un conjunto de filas, por esto se toma la función `filter()` y se agrega la condición que necesitamos para tomar los vuelos que tuvieron un retraso de llegada de dos horas o más. De esta forma tendríamos que:
 
 ```{r Item 1, message=FALSE}
+
         library(nycflights13)
         library(dplyr)
         filter(flights,arr_delay>119)
@@ -58,212 +62,294 @@ Primero identificamos la variable de retraso de llegada, en la base de datos es 
 
 -   **item 2:** Voló a Houston (IAH o HOU).
 
-Se identifica la variable que indique el destino de los vuelos y esta se le da la condicion a la cual queremos filtrar en este caso se define con 2 nombres diferentes al destino del vuelo, por lo tanto en la condicion de `filter()` debe ser consideraro para que tome ambas nomenclaturas, para esto se agrega la operacion logica `|`. De esta forma tendriamos que:
+Se identifica la variable que indique el destino de los vuelos y esta se le da la condición a la cual queremos filtrar en este caso se define con 2 nombres diferentes al destino del vuelo, por lo tanto en la condición de `filter()` debe ser considerado para que tome ambas nomenclaturas, para esto se agrega la operación lógica `|`. De esta forma tendríamos que:
+
 
 ```{r item 2, message=FALSE, paged.print=TRUE}
+
         library(nycflights13)
         library(dplyr)    
         filter(flights, dest=="IAH"|dest=="HOU" )
+        
 ```
 
 -   **Item 3:** Fueron operados por United, American o Delta.
 
-Lo primero es identificar las siglas de las aereolineas que nos dan en este caso UA, AA y DL respectivamente, despues tomamos la variable `carrier` y asignamos las siglas medinte una funcion `filter()`, de esta manera tendremos los vuelos operados por dichas aereolineas, y como en el caso anterior se agrega la operacion logica `|` Para cumplir la condicion de que se filtren cualquiera de las 3 aereolineas. De esta forma tendriamos que:
+Lo primero es identificar las siglas de las aerolíneas que nos dan en este caso UA, AA y DL respectivamente, después tomamos la variable `carrier` y asignamos las siglas mediante una función `filter()`, de esta manera tendremos los vuelos operados por dichas aerolíneas, y como en el caso anterior se agrega la operación lógica `|` Para cumplir la condición de que se filtren cualquiera de las 3 aerolíneas. De esta forma tendríamos que:
 
 ```{r item 3, message=FALSE }
+
         library(nycflights13)
         library(dplyr)
   filter(flights, carrier=="AA"|carrier=="DL"|carrier=="UA")
+  
 ```
 
--   **Item 4**: Volo en verano ( julio, agosto y septiembre ).
+-   **Item 4**: Voló en verano ( Julio, Agosto y Septiembre ).
 
-Para la imprementacion este item se identifica que los meses estan definidos en la variable `month` y que los meses son almacenados por el orden numerico de estos, por esto se identofican los meses de verano como 7,8 y 9 correspondientes a julio, agosto y septiembre respectivamente, para la sintaxis de la condicion se usa la funcion `filter()` y la funcion `%in%`, de esta manera mediante `%in%` se utiliza para verificar si los elementos de un cojunto de datos estan presentes. De esta forma tendriamos que:
+Para la implementación este ítem se identifica que los meses están definidos en la variable `month` y que los meses son almacenados por el orden numérico de estos, por esto se identifican los meses de verano como 7,8 y 9 correspondientes a julio, agosto y septiembre respectivamente, para la sintaxis de la condición se usa la función `filter()` y la función `%in%`, de esta manera mediante `%in%` se utiliza para verificar si los elementos de un conjunto de datos están presentes. De esta forma tendríamos que:
 
 ```{r item 4, message=FALSE }
+
 library(nycflights13)
 library(dplyr)
 filter(flights,month%in%c(7,8,9))
+
 ```
 
--   **Item 5**: LLego mas de dos horas tarde, pero no se retraso.
+-   **Item 5**: LLegó más de dos horas tarde, pero no se retraso.
 
-Para este punto se toma la condicion del Item 1 ya que se mencionan nuevamente los buelos con mas de 2 horas de retraso en llegar, y para la segunda condicion se identifica la variable `dep_delay` como la que toma los datos de los vuelos retrsados, y se agrega el operador logico `&` para combinar las condiciones y filtar los vuelos que cumplan con las condiciones. De esta forma tendriamos que:
+Para este punto se toma la condición del Ítem 1 ya que se mencionan nuevamente los vuelos con más de 2 horas de retraso en llegar, y para la segunda condición se identifica la variable `dep_delay` como la que toma los datos de los vuelos retrasados, y se agrega el operador lógico `&` para combinar las condiciones y filtrar los vuelos que cumplan con las condiciones. De esta forma tendríamos que:
 
 ```{r item 5, message=FALSE }
+
 library(nycflights13)
 library(dplyr)
 filter(flights, arr_delay>119&dep_delay==0)
+
 ```
 
 -   **Item 6**: Se retrasaron al menos una hora, pero estuvieron más de 30 minutos en vuelo.
 
-Con la logica planteada en el Item 5, cambiamos las variables para cumplir con las condiciones, en este caso solo se nececitan los vuelos con un retraso de 1 hora, pero que tambien volaron por mas de 30 minutos, para esto usamos la variable `air_time` y se asigna un tiempo menor o igual 30 minutos. De esta forma tendriamos que:
+Con la lógica planteada en el Ítem 5, cambiamos las variables para cumplir con las condiciones, en este caso solo se necesitan los vuelos con un retraso de 1 hora, pero que también volaron por más de 30 minutos, para esto usamos la variable `air_time` y se asigna un tiempo menor o igual 30 minutos. De esta forma tendríamos que:
 
 ```{r item 6, message=FALSE }
+
 library(nycflights13)
 library(dplyr)
-  filter(flights, arr_delay<=60 & air_time<=30)
+filter(flights, arr_delay<=60 & air_time<=30)
+  
 ```
 
--   **Item 7**: Salio entre la medianoche y las 6 am.
+-   **Item 7**: Salió entre la medianoche y las 6 am.
 
-Con la funcion `filter()`se definen un rango de valores entre las 0 (media noche) y 6 (6 de la mañana) e incluyendo los limites del rango, aplicamos esta logica a la variable `hour`, asi tendriamos los vuelos entre media noche y las 6 am.
+Con la función `filter()`se definen un rango de valores entre las 0 (media noche) y 6 (6 de la mañana) e incluyendo los límites del rango, aplicamos esta lógica a la variable `hour`, así tendríamos los vuelos entre media noche y las 6 am.
 
 ```{r item 7, message=FALSE }
+
 library(nycflights13)
 library(dplyr)
-  filter(flights, hour>=0 & hour<=6)
+filter(flights, hour>=0 & hour<=6)
+
 ```
 
-#### 5.2.4: 2.Otro ayudante de filtrado de dplyr útil es between(). ¿Qué hace? ¿Puede usarse para simplificar los códigos del anterior punto?
+## 5.2.4
 
-la funcion `between()` realiza un rango de valores partiendo de una variable, de esta forma puede cambiar la estructura de varios ejercicios vistos anteriormente, un ejemplo utilizando el Item 7 del punto anterior seria:
+## 2. Otro ayudante de filtrado de dplyr útil es between(). ¿Qué hace? ¿Puede usarse para simplificar los códigos del anterior punto?
+
+La función `between()` realiza un rango de valores partiendo de una variable, de esta forma puede cambiar la estructura de varios ejercicios vistos anteriormente, un ejemplo utilizando el Ítem 7 del punto anterior seria:
 
 ```{r punto 2, message=FALSE }
+
 library(nycflights13)
 library(dplyr)
 filter(flights, between(hour, 0,6))
+
 ```
 
-donde como se ve, al usar la funcion `between()` cambia totalmente la estructura interna de `filter()`, devido a que el uso de esta hace inesesario en uso de la condicion de `<, >, => y <=`.
+Dónde como se ve, al usar la función `between()` cambia totalmente la estructura interna de `filter()`, debido a que el uso de esta hace innecesario en uso de la condición de `<, >, => y <=`.
 
-### 5.3.1:
+## 5.3.1:
 
-#### 1. ¿Cómo pudiste usar arrange() para ordenar todos los valores faltantes al principio?
+## 1. ¿Cómo pudiste usar arrange() para ordenar todos los valores faltantes al principio?
 
-`arrange()` funciona de manera similar a `filter()` excepto que en lugar de seleccionar filas, cambia su orden, y con el uso de `desc()`que permite ordenar columnas por orden desencente y de `is.na()` que comprueba si un valor es NA podemos creas la sih¿giente sintaxis que ordena al principio de una tabla los valores faltantes.
+`arrange()` funciona de manera similar a `filter()` excepto que en lugar de seleccionar filas, cambia su orden, y con el uso de `desc()`que permite ordenar columnas por orden descendente y de `is.na()` que comprueba si un valor es NA podemos creas la siguiente sintaxis que ordena al principio de una tabla los valores faltantes.
 
 ```{r 5.3.1, message=FALSE }
+
 library(nycflights13)
 library(dplyr)
 arrange(flights, desc(is.na(dep_delay)))
+
 ```
 
-#### 2. Ordena `flights` para encontrar los vuelos más retrasados. y los vuelos que salieron lo antes.
+## 2. Ordena `flights` para encontrar los vuelos más retrasados. Y los vuelos que salieron antes.
 
-para ordenar `flights` de forma que podamos encontrar los vuelos mas retrasados y los que despegaron lo mas antes posible, tendremos que ordear la variable `dep_delay` de forma acendente y decendente, de esta forma se ordenan primero de forma decente para hallar el vuelo que mas se retraso.
+Para ordenar `flights` de forma que podamos encontrar los vuelos más retrasados y los que despegaron lo más antes posible, tendremos que ordenar la variable `dep_delay` de forma ascendente y descendente, de esta forma se ordenan primero de forma decente para hallar el vuelo que más se retrasó.
 
 ```{r 5.3.2, message=FALSE }
+
 library(nycflights13)
 library(dplyr)
 arrange(flights,desc(dep_delay))  # Más retrasado
+
 ```
 
-Despues eliminamos la funcion `desc()` para que el orden sea de manera acendente y asi el primer vuelo en la tabla sera el vuelo que salio lo antes posible.
+Después eliminamos la función `desc()` para que el orden sea de manera ascendente y así el primer vuelo en la tabla será el vuelo que salió lo antes posible.
 
 ```{r 5.3.2b, message=FALSE }
+
 library(nycflights13)
 library(dplyr)
-arrange(flights,dep_delay)       # Más adelantado
+arrange(flights,dep_delay)  # Más adelantado
+
 ```
 
-#### 3. Ordenar flights para encontrar los vuelos más rápidos.
+## 3. Ordenar flights para encontrar los vuelos más rápidos.
 
-Para encontrar los vuelos mas rapidos usamos `arrange()` con la variable `air_time`.
+Para encontrar los vuelos más rápidos usamos `arrange()` con la variable `air_time`.
 
 ```{r 5.3.3, message=FALSE }
+
 library(nycflights13)
 library(dplyr)
 arrange(flights,air_time)
+
 ```
 
-#### 4. ¿Qué vuelos viajaron más lejos? ¿Cuál viajó menos?.
+## 4. ¿Qué vuelos viajaron más lejos? ¿Cuál viajó menos?.
 
-Para encontrar los vuelos que viajaron mas usamos `arrange()` con la variable `distance` y lo ordenamos con `desc()`.
+Para encontrar los vuelos que viajaron más usamos `arrange()` con la variable `distance` y lo ordenamos con `desc()`.
 
 ```{r 5.3.4, message=FALSE }
+
 library(nycflights13)
 library(dplyr)
 arrange(flights,desc(distance)) # Vuelo más largo
+
 ```
 
-Para encontrar el vuelo que viajaro menos, quitamos `desc()` del codigo anterior y asi toman el orden normal.
+Para encontrar el vuelo que viajaro menos, quitamos `desc()` del código anterior y así toman el orden normal.
 
 ```{r 5.3.4b, message=FALSE }
+
 library(nycflights13)
 library(dplyr)
 arrange(flights,distance) # Vuelo más largo
+
 ```
 
-### 5.4.1:
+## 5.4.1:
 
-#### 2. ¿Qué sucede si se incluye el nombre de una variable varias veces en select()?
+## 2. ¿Qué sucede si se incluye el nombre de una variable varias veces en select()?
 
-Cualquier variable duplicada solo se incluye una vez. Para comprobar esto, tenemos el siguiente ejemplo
+Cualquier variable duplicada solo se incluye una vez. Para comprobar esto, tenemos el siguiente ejemplo.
 
 ```{r 5.4.2, message=FALSE }
+
 library(nycflights13)
 library(dplyr)
 select(flights, year, day, year, year, day, dest, dep_delay)
+
 ```
 
-#### 3.Que hace la funcion any_of()? ¿Por qué podría ser útil en conjunto con este vector? 
+## 3. Qué hace la función any_of()? ¿Por qué podría ser útil en conjunto con este vector? 
 
 **`vars <- c("year", "month", "day", "dep_delay", "arr_delay")`**
 
-La función `one_of()` se utiliza para seleccionar solo las columnas del conjunto de datos que se encuentran en un vector, en este caso el vector "`vars`", tambien con esta función se puede simplificar la funcion `select()`.
+La función `one_of()` se utiliza para seleccionar solo las columnas del conjunto de datos que se encuentran en un vector, en este caso el vector "`vars`", también con esta función se puede simplificar la función `select()`.
 
 ```{r 5.4.3, message=FALSE}
+
 library(nycflights13)
 library(dplyr)
 vars<-c("year", "month", "day", "dep_delay", "arr_delay")
 select(flights, one_of(vars))
+
 ```
 
 
-#### 4. ¿Te sorprende el resultado de ejecutar el siguiente código? `select(flights, contains("TIME"))`
+## 4. ¿Te sorprende el resultado de ejecutar el siguiente código? `select(flights, contains("TIME"))`
 
-Es sorprendente, es ingenioso que mediante una línea de código se pódia realizar una "busqueda" de esta forma. ya que realizar una busqueda/filtracion de variables mediente una sentencia es interesante.
+Es sorprendente, es ingenioso que mediante una línea de código se podía realizar una "búsqueda" de esta forma. ya que realizar una búsqueda/filtración de variables mediante una sentencia es interesante.
 
 ```{r 5.4.4, message=FALSE}
+
 library(nycflights13)
 library(dplyr)
 select(flights, contains("time"))
+
 ```
 
 
-### 5.5.2:
-#### 1. convertir `dep_time` y `sched_dep_time ` en una representacion de minutos desde la media noche
+## 5.5.2:
 
-Para obtener los horarios de salida en minutos, se divide `dep_time` en 100 para obtener las horas desde la medianoche y multiplicar por 60 para tener los minutos, despues sumar el resto de `dep_time` dividido por 100. como ejemplo podemos usar la ora 14:05 (1405 o 2:05Pm) 
+## 1. Convertir `dep_time` y `sched_dep_time ` en una representación de minutos desde la media noche.
+
+Para obtener los horarios de salida en minutos, se divide `dep_time` en 100 para obtener las horas desde la medianoche y multiplicar por 60 para tener los minutos, después sumar el resto de `dep_time` dividido por 100. como ejemplo podemos usar la ora 14:05 (1405 o 2:05Pm).
+
 ```{r 5.5.1, message=FALSE}
+
 1405 %/% 100 * 60 + 1405 %% 100
+
 ```
-Sin embargo para que todas las horas se puedan convertir se necita hacer la operacion `&&` del resultado con `1440`. esto devido a que si se ingresa un valor de medida noche (2400) no se toma como el resultado de 0 como se espera, si no que da como resultado `1440`. Despues se remplaza el valor ejemplo por la variable a convertir, sin embargo para realizar dicha conversion se requiere el uso de la funcion `mutate()`, adicionalmente, se crean dos nuevas columnas que representaran dicha conversion de los datos. Asi se optiene que:
+
+Sin embargo, para que todas las horas se puedan convertir se necita hacer la operación `&&` del resultado con `1440`. esto debido a que si se ingresa un valor de medida noche (2400) no se toma como el resultado de 0 como se espera, si no que da como resultado `1440`. Después se remplaza el valor ejemplo por la variable a convertir, sin embargo para realizar dicha conversión se requiere el uso de la función `mutate()`, adicionalmente, se crean dos nuevas columnas que representaran dicha conversión de los datos. Así se obtiene que:
 
 ```{r 5.5.1p1, message=FALSE}
+
 library(nycflights13)
 library(dplyr)
 mutate(flights, dep_time_min=(dep_time%/%100*60+dep_time%%100)%%1440,
-           sched_dep_time_min=(sched_dep_time%/%100*60+sched_dep_time%%100)%%1440)
+sched_dep_time_min=(sched_dep_time%/%100*60+sched_dep_time%%100)%%1440)
+
 ```
 
-y para facilitar la visualizacion de estas conversiones usamos una funcion `select()` con las nuevas variables.
+Y para facilitar la visualización de estás conversiones usamos una función `select()` con las nuevas variables.
 
 ```{r 5.5.1p2, message=FALSE}
+
 library(nycflights13)
 library(dplyr)
 new_flights<-mutate(flights, dep_time_min=(dep_time%/%100*60+dep_time%%100)%%1440,
-           sched_dep_time_min=(sched_dep_time%/%100*60+sched_dep_time%%100)%%1440)
- select(new_flights,dep_time_min, sched_dep_time_min)
+sched_dep_time_min=(sched_dep_time%/%100*60+sched_dep_time%%100)%%1440)
+select(new_flights,dep_time_min, sched_dep_time_min)
 
 ```
 
 
-#### 2. Comparar `air_time` con `arr_time - dep_time`. ¿Qué esperas ver? ¿Que ves? ¿Qué necesitas hacer para arreglarlo?
+## 2. Comparar `air_time` con `arr_time - dep_time`. ¿Qué esperas ver? ¿Qué ves? ¿Qué necesitas hacer para arreglarlo?
 
-Espero que `air_time` sea la diferencia entre llegada y salida de los vuelos. visto de otra forma puede ser `air_time = arr_time - dep_time`. Para confirmar esto , se realiza un codigo parecido al anterior, esto para operar los valores de las variables. Una vez comparado `air_time` con `arr_time - dep_time` se puede afirmar que `air_time = arr_time - dep_time`.
+Espero que `air_time` sea la diferencia entre llegada y salida de los vuelos. visto de otra forma puede ser `air_time = arr_time - dep_time`. Para confirmar esto, se realiza un código parecido al anterior, esto para operar los valores de las variables. Una vez comparado `air_time` con `arr_time - dep_time` se puede afirmar que `air_time = arr_time - dep_time`.
 
 ```{r 5.5.2, message=FALSE}
+
 library(nycflights13)
 library(dplyr)
 fl_air_time<-mutate(flights,dep_time=(dep_time%/%100*60+dep_time%%100)%%1440,
-                      arr_time=(arr_time%/%100*60+arr_time%%100)%%1440,
-                      
-                      air_time2=air_time-arr_time+dep_time)
-
+arr_time=(arr_time%/%100*60+arr_time%%100)%%1440,
+air_time2=air_time-arr_time+dep_time)
 select(fl_air_time, air_time2 )
+
 ```
-Pues no ya que si esta declaracion fuera correcta, todods los vuelos de `air_time2` deberian ser 0, pero esto no es asi. asi que para decir que `air_time = arr_time - dep_time`  no es 0 debido la zona horaria de los vuelos ya que estas se pueden cruzar entre ellas hablando sobre buelos internacionales, sin embargo tambien hay casos en los que el vuelo es nacional y aun asi el resultado de la operacion no es 0. ¿A que se debe esto? pues puede que los valores de `arr_time` y `dep_time` no sean valores que se toman desde el depegue o propio aterrizaje del vuelo ya que hay mas variables a tener en cuenta de desde cuando sale el vuelo como el tiempo en pista antes de despegar o desembarcar.
+
+Pues no ya que, si esta declaración fuera correcta, todos los vuelos de `air_time2` deberían ser 0, pero esto no es así. así que para decir que `air_time = arr_time - dep_time` no es 0 debido la zona horaria de los vuelos ya que estas se pueden cruzar entre ellas hablando sobre vuelos internacionales, sin embargo, también hay casos en los que el vuelo es nacional y aun así el resultado de la operación no es 0. ¿A qué se debe esto? pues puede que los valores de `arr_time` y `dep_time` no sean valores que se toman desde el despegue o propio aterrizaje del vuelo ya que hay más variables a tener en cuenta de desde cuando sale el vuelo como el tiempo en pista antes de despegar o desembarcar.
+
+## 5.6.7
+
+## 1 Haga una lluvia de ideas sobre al menos 5 formas diferentes de evaluar las características típicas de retraso de un grupo de vuelos. Considere los siguientes escenarios:
+
+1- Media aritmética: Calcula el promedio de los tiempos de llegada de los vuelos y compara con el horario previsto. Esta evaluación sería apropiada para todos los escenarios mencionados.
+
+2- Desviación estándar: Calcula la variabilidad en los tiempos de llegada de los vuelos. Esta evaluación sería apropiada para los escenarios en los que los tiempos de llegada varían, como el primer y el tercer escenario.
+
+3- Coeficiente de variación: Calcula la variabilidad relativa de los tiempos de llegada de los vuelos. Esta evaluación sería apropiada para los escenarios en los que los tiempos de llegada varían, como el primer y el tercer escenario.
+
+4- Frecuencia de retraso: Calcula la cantidad de veces que los vuelos llegan tarde y compara con la cantidad de vuelos totales. Esta evaluación sería apropiada para los escenarios en los que hay retrasos, como el primer, segundo y tercer escenario.
+
+5- Percentil 99: Calcula el tiempo de llegada del vuelo que ocurre en el percentil 99 y compara con el horario previsto. Esta evaluación sería apropiada para el cuarto escenario, donde el 1% de los vuelos llega dos horas tarde.
+
+## 5.7.1
+
+## 2 ¿Qué avión ( tailnum) tiene el peor récord de puntualidad?
+
+
+
+```{r 5.7.1, message=FALSE}
+
+library(nycflights13)
+library(tidyverse)
+library(readr)
+library(dplyr)
+nycflights13::flights
+fl<-nycflights13::flights
+time_record<-flights %>%
+filter(!is.na(arr_delay)) %>%
+group_by(tailnum) %>%
+summarise(arr_delay = mean(arr_delay), n = n()) %>%
+filter(n >= 20) %>%
+filter(min_rank(desc(arr_delay)) == 1)
+
+```
+
 
